Fixed alignment of the sub nav at 480px viewport.

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -501,3 +501,10 @@ footer {
         overflow-x: hidden;
     }
 }
+
+@media (max-width: 480px) {
+    .manage-nav ul li{
+        margin-left: -1px;
+        width: 100px;
+    }
+}
